--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -4,7 +4,7 @@ Not yet released.
 - Configured a workflow to spell-check Python and templates code using [CodeSpell](https://github.com/codespell-project/codespell) prior to each version release.
 - `--skip-themes` flag is added to all wp-cli commands in WP Manager.
 - [WP Vulnerabilities in Site Manager](https://i.postimg.cc/QXnfmvV6/2026-02-19-15-28.png).
-- Optimized wp-cli commands execution on WP Manager.
+- All WP-CLI commands in WP Manager are optimized to use `php -d memory_limit=-1 -d open_basedir=none -d disable_functions= -d display_errors=0 -d error_log=/dev/null`.
 
 ### 🐛 Bug Fixes
 - [Bug in /file-manager/upload - upload percentage stuck on 1% #861](https://github.com/stefanpejcic/OpenPanel/issues/861)
