--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -6,6 +6,8 @@ Not yet released.
 - [WP Vulnerabilities in Site Manager](https://i.postimg.cc/QXnfmvV6/2026-02-19-15-28.png).
 - All WP-CLI commands in WP Manager are optimized to use `php -d memory_limit=-1 -d open_basedir=none -d disable_functions= -d display_errors=0 -d error_log=/dev/null`.
 - Removed doble call to `/plugins` on Dashboard page.
+- custom.css and custom.js files are included in all OpenPanel pages only when Admin added custom code.
+- Optimized plugin imports on startup.
 
 ### 🐛 Bug Fixes
 - [Bug in /file-manager/upload - upload percentage stuck on 1% #861](https://github.com/stefanpejcic/OpenPanel/issues/861)
