--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -10,6 +10,7 @@ Not yet released.
 - Optimized plugin imports on startup.
 
 ### 🐛 Bug Fixes
+- Fixed bug in File Manager with 'Calculate' link when uri has `?` or `#` params.
 - [Bug in /file-manager/upload - upload percentage stuck on 1% #861](https://github.com/stefanpejcic/OpenPanel/issues/861)
 - Fixed caching bug on `/api/database_info` and `/api/database-size`.
 - Fixed 500 error on email edit page.
