--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -4,10 +4,11 @@ Not yet released.
 - Configured a workflow to spell-check Python and templates code using [CodeSpell](https://github.com/codespell-project/codespell) prior to each version release.
 - `--skip-themes` flag is added to all wp-cli commands in WP Manager.
 - [WP Vulnerabilities in Site Manager](https://i.postimg.cc/QXnfmvV6/2026-02-19-15-28.png).
-- All WP-CLI commands in WP Manager are optimized to use `php -d memory_limit=-1 -d open_basedir=none -d disable_functions= -d display_errors=0 -d error_log=/dev/null`.
-- Removed doble call to `/plugins` on Dashboard page.
-- custom.css and custom.js files are included in all OpenPanel pages only when Admin added custom code.
-- Optimized plugin imports on startup.
+- All WP-CLI commands in WP Manager are now optimized to run with `php -d memory_limit=-1 -d open_basedir=none -d disable_functions= -d display_errors=0 -d error_log=/dev/null`.
+- Removed duplicate call to `/plugins` on the Dashboard page.
+- Include custom.css and custom.js on OpenPanel pages only if Admin adds custom code.
+- Plugin imports are now optimized during startup.
+- The database size on the `/api/mysql-size` route is now rounded to 2 decimal places.
 
 ### 🐛 Bug Fixes
 - Fixed bug in File Manager with 'Calculate' link when uri has `?` or `#` params.
