--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -9,6 +9,7 @@ Not yet released.
 - Include custom.css and custom.js on OpenPanel pages only if Admin adds custom code.
 - Plugin imports are now optimized during startup.
 - The database size on the `/api/mysql-size` route is now rounded to 2 decimal places.
+- `docker-usage_stats_cleanup` command is removed.
 
 ### 🐛 Bug Fixes
 - Fixed bug in File Manager with 'Calculate' link when uri has `?` or `#` params.
@@ -19,3 +20,4 @@ Not yet released.
 - `[1] [CRITICAL] WORKER TIMEOUT (pid:75)`
 - Fixed bug executing wp-cli command on WP Manager > Options.
 - Fixed bug generating auto-login link for WP Manager when website was added (scanned) and mu-plugins directory does not exist.
+- Fixed bug with resource usage retention in user panel.
