--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -22,3 +22,4 @@ Not yet released.
 - Fixed bug generating auto-login link for WP Manager when website was added (scanned) and mu-plugins directory does not exist.
 - Fixed bug with resource usage retention in user panel.
 - `/usr/local/opencli/plan/create.sh: line 35: TEXT: No such file or directory`
+- Fixed CSS bug with mobile menu on *OpenAdmin > Users > single user* page.
