--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -4,6 +4,7 @@ Not yet released.
 - Configured a workflow to spell-check Python and templates code using [CodeSpell](https://github.com/codespell-project/codespell) prior to each version release.
 - `--skip-themes` flag is added to all wp-cli commands in WP Manager.
 - [WP Vulnerabilities in Site Manager](https://i.postimg.cc/QXnfmvV6/2026-02-19-15-28.png).
+- [Last login log is now visible on *OpenAdmin > Users > single user* page](https://i.postimg.cc/k78mv7Tq/admin-login-log.png).
 - All WP-CLI commands in WP Manager are now optimized to run with `php -d memory_limit=-1 -d open_basedir=none -d disable_functions= -d display_errors=0 -d error_log=/dev/null`.
 - Removed duplicate call to `/plugins` on the Dashboard page.
 - Include custom.css and custom.js on OpenPanel pages only if Admin adds custom code.
