--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -6,7 +6,8 @@ Not yet released.
 - [WP Vulnerabilities in Site Manager](https://i.postimg.cc/QXnfmvV6/2026-02-19-15-28.png).
 - [Last login log is now visible on *OpenAdmin > Users > single user* page](https://i.postimg.cc/k78mv7Tq/admin-login-log.png).
 - All WP-CLI commands in WP Manager are now optimized to run with `php -d memory_limit=-1 -d open_basedir=none -d disable_functions= -d display_errors=0 -d error_log=/dev/null`.
-- Removed duplicate call to `/plugins` on the Dashboard page.
+- Removed duplicate call to `/plugins` on the *OpenPanel > Dashboard* page.
+- Removed duplicate call to `/shortcuts.json` on the *OpenAdmin > Dashboard* page.
 - Include custom.css and custom.js on OpenPanel pages only if Admin adds custom code.
 - Plugin imports are now optimized during startup.
 - The database size on the `/api/mysql-size` route is now rounded to 2 decimal places.
