--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -12,6 +12,8 @@ Not yet released.
 - Plugin imports are now optimized during startup.
 - The database size on the `/api/mysql-size` route is now rounded to 2 decimal places.
 - `docker-usage_stats_cleanup` command is removed.
+- *OpenAdmin > Users > single user* page will now accept and update hash in the url to open tabs.
+
 
 ### 🐛 Bug Fixes
 - Fixed bug in File Manager with 'Calculate' link when uri has `?` or `#` params.
