--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -13,6 +13,8 @@ Not yet released.
 - The database size on the `/api/mysql-size` route is now rounded to 2 decimal places.
 - `docker-usage_stats_cleanup` command is removed.
 - *OpenAdmin > Users > single user* page will now accept and update hash in the url to open tabs.
+- [Added `logs` flag to `opencli domains-ssl` command](https://dev.openpanel.com/cli/domains.html#logs).
+- [Option to view SSL-related logs for domain from *OpenAdmin > Domains* page](https://i.postimg.cc/Z4rtMp9V/2026-02-20-14-41.png).
 
 
 ### 🐛 Bug Fixes
