--- a/website/docs/changelog/1.7.44.md
+++ b/website/docs/changelog/1.7.44.md
@@ -1,4 +1,4 @@
-Not yet released.
+Released on February 20, 2025
 
 ### 💅 Polish
 - Configured a workflow to spell-check Python and templates code using [CodeSpell](https://github.com/codespell-project/codespell) prior to each version release.
