fix(i18n): fix jsx parser and broken image link in hungarian translation

--- a/website/i18n/hu/docusaurus-plugin-content-docs/current/changelog/1.3.8.md
+++ b/website/i18n/hu/docusaurus-plugin-content-docs/current/changelog/1.3.8.md
@@ -12,7 +12,7 @@ Megjelenés: 2025. június 09
 - Javítva a hiba módosítási funkciója az „alapértelmezettről” az *OpenAdmin > Terv szerkesztése* űrlapon.
 - importálási hiba javítása a domain_logs modullal.
 - [A tömörítéskor hibás archive_path_logged_logged hiba javítása](https://i.postimg.cc/wTGR8vNY/2025-06-06-13-27.png)
-- hibák javítása az `opencli domains-ssl <DOMAIN> info paranccsal.
+- hibák javítása az `opencli domains-ssl <DOMAIN> info` paranccsal.
 - 404-es hiba javítása az `/api/mysql-size` útvonalon.
 - 500-as hiba javítása a Website Builder telepítésénél, ha az alkönyvtár nincs beállítva.
 - CSS hibák javítása az Inodes Explorer és a Lemezhasználat oldalakon.
