--- a/website/docs/changelog/1.7.45.md
+++ b/website/docs/changelog/1.7.45.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Added option to delete domains from *OpenAdmin > Domains* page.
+- Enhanced MySQL user password restrictions: all characters are now supported.
 
 ### 🐛 Bug Fixes
 - Fixed bug enabling maintenance_mode for WordPress from WP Manager.
