Translate remaining UI and homepage sections to Hungarian

--- a/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/os/_category_.json
+++ b/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/os/_category_.json
@@ -1,5 +1,5 @@
 {
-  "label": "Operating Systems",
+  "label": "Operációs rendszerek",
   "position": 11,
   "link": {
     "type": "generated-index"
