--- a/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/support/_category_.json
+++ b/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/support/_category_.json
@@ -1,5 +1,5 @@
 {
-  "label": "Support Operations",
+  "label": "Támogatási műveletek",
   "position": 14,
   "link": {
     "type": "generated-index"
