--- a/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/accounts/_category_.json
+++ b/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/accounts/_category_.json
@@ -1,5 +1,5 @@
 {
-  "label": "Account Administration",
+  "label": "Fiók adminisztrációja",
   "position": 9,
   "link": {
     "type": "generated-index"
