--- a/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/install-update/_category_.json
+++ b/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/install-update/_category_.json
@@ -1,5 +1,5 @@
 {
-  "label": "Install & Updates",
+  "label": "Telepítés és frissítések",
   "position": 13,
   "link": {
     "type": "generated-index"
