--- a/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/dev-experience/_category_.json
+++ b/website/i18n/hu/docusaurus-plugin-content-docs/current/articles/dev-experience/_category_.json
@@ -1,5 +1,5 @@
 {
-  "label": "Fejlesztői élmény",
+  "label": "Fejlesztői tapasztalat",
   "position": 16,
   "link": {
     "type": "generated-index"
