--- a/website/docs/changelog/1.7.45.md
+++ b/website/docs/changelog/1.7.45.md
@@ -7,4 +7,4 @@ Not yet released.
 ### 🐛 Bug Fixes
 - Fixed bug enabling maintenance_mode for WordPress from WP Manager.
 - Fixed false-positive bug detecting maintenance_mode for WordPress in WP Manager, when `wp-content/maintenance.php` template is present.
-- 
+- Fixed bug in `opencli user-suspend` script that caused user's containers to continue working when suspended.
