--- a/website/docs/changelog/1.7.45.md
+++ b/website/docs/changelog/1.7.45.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [Hungarian translation](https://community.openpanel.org/d/262-goviris-magyar-hungarian-translation-for-openpanel)
 - Added option to delete domains from *OpenAdmin > Domains* page.
 - Enhanced MySQL user password restrictions: [all characters are now supported](/docs/articles/accounts/forbidden-usernames/#mysql--mariadb).
 
