--- a/website/docs/changelog/1.7.45.md
+++ b/website/docs/changelog/1.7.45.md
@@ -9,3 +9,4 @@ Not yet released.
 - Fixed bug enabling maintenance_mode for WordPress from WP Manager.
 - Fixed false-positive bug detecting maintenance_mode for WordPress in WP Manager, when `wp-content/maintenance.php` template is present.
 - Fixed bug in `opencli user-suspend` script that caused user's containers to continue working when suspended.
+- [Fixed bug enabling Varnish proxy for user in Vhosts file](https://github.com/stefanpejcic/opencli/commit/cf216bfccd2f6ea37c3f7a561097a017d1a8a1d8).
