--- a/website/docs/changelog/1.7.45.md
+++ b/website/docs/changelog/1.7.45.md
@@ -12,4 +12,5 @@ Not yet released.
 - [Fixed bug enabling Varnish proxy for user in Vhosts file](https://github.com/stefanpejcic/opencli/commit/cf216bfccd2f6ea37c3f7a561097a017d1a8a1d8).
 - Fixed `mysql: [ERROR] mysql: option '-e' requires an argument.` on `opencli admin suspend` and `opencli admin unsuspend` commands.
 - [Error on link on PostgreSQL Create User view #869](https://github.com/stefanpejcic/OpenPanel/issues/869)
+- [Too many redirects on wp-admin when varnish enabled for user AFTER creating a WP website #853](https://github.com/stefanpejcic/OpenPanel/issues/853)
 
