--- a/website/docs/changelog/1.7.45.md
+++ b/website/docs/changelog/1.7.45.md
@@ -4,6 +4,7 @@ Not yet released.
 - [Hungarian translation](https://community.openpanel.org/d/262-goviris-magyar-hungarian-translation-for-openpanel)
 - Added option to delete domains from *OpenAdmin > Domains* page.
 - Enhanced MySQL user password restrictions: [all characters are now supported](/docs/articles/accounts/forbidden-usernames/#mysql--mariadb).
+- Added 'SSH Allowlist' on *OpenAdmin > Notifications* page.
 
 ### 🐛 Bug Fixes
 - Fixed bug enabling maintenance_mode for WordPress from WP Manager.
