--- a/website/docs/changelog/1.7.45.md
+++ b/website/docs/changelog/1.7.45.md
@@ -14,4 +14,5 @@ Not yet released.
 - Fixed `mysql: [ERROR] mysql: option '-e' requires an argument.` on `opencli admin suspend` and `opencli admin unsuspend` commands.
 - [Error on link on PostgreSQL Create User view #869](https://github.com/stefanpejcic/OpenPanel/issues/869)
 - [Too many redirects on wp-admin when varnish enabled for user AFTER creating a WP website #853](https://github.com/stefanpejcic/OpenPanel/issues/853)
+- Fixed bug generating database backup in WP Manager.
 
